css/styles.css
/* ... */
/*========== Responsive typography ==========*/
@media screen and (min-width: 1024px) {
  :root {
    --normal-font-size: 1rem;
  }
}

/*=============== BASE ===============*/
/*#region base*/
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  padding: 0;
	margin: 0 auto;

  font-family: var(--font-family-body);
  font-size: var(--font-size-body);
  color: var(--text-body);
  background-color: var(--surface-page);
}
html {
  overflow-y: scroll;
}
body {
  /*max-width: 80em;*/
  background-image: var(--background-image-location);
  background-blend-mode: overlay;
}

/*#region TEXT FORMATTING*/

h1 {
  font-family: var(--font-family-heading);
  font-weight: var(--font-weight-semi-bold);
  font-size: var(--font-size-h1);
  line-height: var(--line-height-h1);
  text-transform: uppercase;
  text-align: center;
  color: var(--text-selected);
}

.text-display {
  text-align: center;
  font-family: var(--font-family-display);
  font-size: 10vw;
  line-height: 10vw;
}

h2 {
  font-family: var(--font-family-heading);
  font-size: var(--font-size-h2);
  line-height: var(--line-height-h2);
  text-transform: uppercase;
  align-self: stretch;
  width: 100%;
  padding: 6px 12%;
  gap: 16px;
  border-top: 1px solid #4E5E5F;
  border-bottom: 1px solid #4E5E5F;
  background-color: var(--surface-primary);
}

@media screen and (max-width: 800px) {
  h2 {
    align-self: center;
    width: 100vw;
  }
}

.subdisplay {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 0px;
}

.text-subdisplay {
  width: auto;
  padding: 0px;
  text-align: center;
  align-self: center;
  justify-self: center;
  border-top: none;
  border-bottom: none;
  background-color: transparent;
}

a:hover .text-subdisplay {
  color: var(--text-selected);
}

h3 {
  color: var(--text-selected);
  font-family: var(--font-family-heading);
  font-size: var(--font-size-h3);
  font-weight: 700;
  line-height: var(--line-height-h3);
  text-transform: uppercase;

  display: flex;
  flex-grow: 1;
  padding: var(--space-sm) 8vw;
  gap: var(--space-md);
  border-top: 1px solid #4E5E5F;
  border-bottom: 1px solid #4E5E5F;
  background-color: var(--surface-primary);
}

h3.subheading{
  background-color: transparent;
  border-top: none;
  align-self: center;
  width: 100%;
  justify-content: center;
}

h4 {
  color: var(--text-selected);
  font-family: var(--font-family-heading);
  font-size: var(--font-size-h4);
  font-weight: 700;
  line-height: var(--line-height-h4);
  text-transform: uppercase;
}

h5 {
  color: var(--text-body);
  font-family: var(--font-family-heading);
  font-size: var(--font-size-h5);
  font-weight: 700;
  line-height: var(--line-height-h5);
  text-transform: uppercase;
}

h1, h2, h3, h4 {
  scroll-margin-top: calc(var(--header-height) + 1em);
}

p {
  font-family: var(--font-family-body);
  font-size: var(--font-size-body);
  line-height: 1.6rem;
  max-width: 60vw;
}

/*#endregion TEXT FORMATTING*/

main{
  display: flex;
  flex-direction: column;
  padding-top: var(--header-height);
  position: relative;
}
main:first-child {
  margin-top: 0;
}

.invisible {
  visibility: hidden;
}

@media screen and (max-width: 700px) {
  .invisible {
    visibility: collapse;
  }
}

/*#endregion base*/

/*=============== REUSABLE CSS CLASSES ===============*/
/*#region reusable classes*/

/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden:not(:focus):not(:active) {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

/* Prevent visually-hidden skip link fom pushing content around when focused */
#skip-link.visually-hidden:focus {
	position: absolute;
	top: 1rem;
	left: 1rem;
	/* Ensure it is positioned on top of everything else when it is shown */
	z-index: 999;
}

.meta-container {
  display: flex;
  flex-grow: 1;
  max-width: 100em;
  width: 100em;
  padding-inline: 3rem;
  margin-inline: auto;
}

.links-nextprev {
	display: flex;
	justify-content: space-between;
  width: 100%;
	gap: .5em 1em;
	list-style: "";
	border-top: 1px dashed var(--color-gray-20);
	padding: 1em 0;
}

.links-nextprev > * {
	flex-grow: 1;
  max-width: 20%;
}

.links-nextprev li i {
  font-size: xx-large;
  color: var(--text-on-action);
}

.links-nextprev-prev {
  flex-direction: row !important;
}

.card.links-nextprev-next {
  justify-content: end;
}

.links-nextprev-next {
  flex-direction: row !important;
	text-align: right;
}

.container {
  margin-inline: 2.5rem;
}

/*#region Hero*/
.hero {
  /*Layout*/
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
  align-self: stretch;
  gap: 1rem;
  /*Style*/
  background: var(--deep-purple-colour);
  color: var(--text-light-colour);
  
  padding: 2.5rem;
}

.hero h1 {
  color: var(--text-light-colour);
}

.heroLeft,
.heroRight {
  flex-grow: 1;
}

.heroLeft {
  display: flex;
  flex-direction: column;
  align-self: center;
  width: 50%;
  gap: 1rem;
}

.heroRight{
  display: flex;
  align-items: end;
  width: 50%;
}
.heroRight img {
  max-width: 100%;
  max-height: 400px;
  object-fit: contain;
  height: fit-content;
  vertical-align: bottom;
}

/* Hero for mobile devices */
@media screen and (max-width: 700px) {
  .hero {
    /*Layout*/
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: stretch;
    align-self: stretch;
    gap: 1.5rem;
    /*Style*/
    background: var(--deep-purple-colour);
    color: var(--text-light-colour);
  }
  .heroLeft,
  .heroRight {
    width: 100%;
  }
  .heroLeft {
    padding-bottom: 0;
  }
  .heroRight {
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }
  .heroRight img{
    max-height: 300px;
  }
}
/* ... */

